--- a/DOM.html
+++ b/DOM.html
@@ -35,7 +35,7 @@
             <p>Node.js</p>
         </div>
 
-        <form id="formulario">
+        <form id="formulario" action="/login">
             <input 
                 type="text"
                 placeholder="Tu Nombre"
@@ -59,6 +59,6 @@
       
     </div>
 
-    <script src="js/27.js"></script>
+    <script src="js/32.js" type="module"></script>
 </body>
 </html>
